[gd_scene load_steps=16 format=2]

[ext_resource path="res://Assets/Enemies/police_body.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Bullet/PhysicalBullet.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/rifle.glb" type="PackedScene" id=3]
[ext_resource path="res://Assets/Sprites/enemy_status_resting.png" type="Texture" id=4]
[ext_resource path="res://Assets/Enemies/PoliceSniperEnemy.gd" type="Script" id=5]
[ext_resource path="res://Assets/Sprites/enemy_status_idle.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sounds/gunshot.ogg" type="AudioStream" id=7]
[ext_resource path="res://Assets/Sprites/enemy_status_shooting.png" type="Texture" id=8]
[ext_resource path="res://Assets/Sprites/enemy_status_covering.png" type="Texture" id=9]
[ext_resource path="res://Assets/Sprites/enemy_status_moving.png" type="Texture" id=10]

[sub_resource type="CapsuleMesh" id=1]
radius = 0.7
mid_height = 3.0

[sub_resource type="BoxShape" id=8]
extents = Vector3( 12.3769, 13.2477, 14.8639 )

[sub_resource type="Animation" id=3]
resource_name = "RECOIL"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Gun:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 90, 0 ), Vector3( 0, 84, 15 ), Vector3( 2.20872e-08, 90, 8.53774e-07 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Gun:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 1.4, 1.1, 0.7 ), Vector3( 1.4, 1.1, 0.8 ) ]
}

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "1",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "3",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "4",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "2",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "0",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape" id=5]
radius = 0.870395
height = 2.59279

[node name="SniperEnemy" type="KinematicBody" groups=["enemies"]]
transform = Transform( 1.22247, 0, 0, 0, 1.14906, 0, 0, 0, 1.34735, 0, 0, 0 )
script = ExtResource( 5 )
bullet = ExtResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 1.61038, 0.670167, 0.19709 )
visible = false
mesh = SubResource( 1 )
material/0 = null

[node name="Gun" parent="." instance=ExtResource( 3 )]
transform = Transform( -8.74228e-08, 0, 2, 0, 2, 0, -2, 0, -8.74228e-08, 1.4, 1.1, 0.7 )

[node name="Muzzle" type="Spatial" parent="Gun"]
transform = Transform( -1.62921e-07, 0, -1, 3.17637e-21, 1, 0, 1, -1.29718e-17, -1.62921e-07, 0.959829, 0, 2.38419e-07 )

[node name="ShotTimer" type="Timer" parent="."]
autostart = true

[node name="SightRange" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.54403, 2.67003, -0.213766 )

[node name="CollisionShape" type="CollisionShape" parent="SightRange"]
shape = SubResource( 8 )

[node name="Eyes" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.02152, 2, 0 )

[node name="RayCast" type="RayCast" parent="Eyes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.68655, -0.908417 )
enabled = true
cast_to = Vector3( 0, 0, -300 )
collide_with_areas = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RECOIL = SubResource( 3 )

[node name="GunShotSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -20.0
pitch_scale = 0.9

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 0.4
autostart = true

[node name="RestTimer" type="Timer" parent="."]
wait_time = 8.0
autostart = true

[node name="StatusLabel" type="AnimatedSprite3D" parent="."]
transform = Transform( -4, 0, -6.03983e-07, 0, 4, 0, 6.03983e-07, 0, -4, 1.76308, 4, -2.66218e-07 )
frames = SubResource( 4 )
animation = "4"
playing = true

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -2.71798e-08, -1.21954, 0, 0.6218, -5.33076e-08, 1.81, 0.897016, 0.0999725 )
shape = SubResource( 5 )

[node name="police body" parent="." instance=ExtResource( 1 )]
transform = Transform( -0.8, 0, -6.99382e-08, 0, 0.8, 0, 6.99382e-08, 0, -0.8, 1.865, -1.028, 0.2 )

[node name="arm_left" parent="police body" index="0"]
transform = Transform( 0.999985, 0.00530517, 0.00163586, -0.00552541, 0.979687, 0.200456, -0.000539199, -0.200462, 0.979702, -0.071925, -0.0970855, 0.0199844 )

[node name="arm_right" parent="police body" index="1"]
transform = Transform( 0.856709, 0, 0.515801, 0, 1, 0, -0.515801, 0, 0.856709, 0, 0, 0 )

[connection signal="was_shot" from="." to="." method="_on_GenericEnemy_was_shot"]
[connection signal="was_shot" from="." to="." method="_on_SniperEnemy_was_shot"]
[connection signal="timeout" from="ShotTimer" to="." method="_on_ShotTimer_timeout"]
[connection signal="body_entered" from="SightRange" to="." method="_on_SightRange_body_entered"]
[connection signal="body_exited" from="SightRange" to="." method="_on_SightRange_body_exited"]
[connection signal="timeout" from="MoveTimer" to="." method="_on_MoveTimer_timeout"]
[connection signal="timeout" from="RestTimer" to="." method="_on_RestTimer_timeout"]

[editable path="police body"]
